syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

option go_package = "github.com/dpup/info.ersn.net/server/api/v1";

// RoadsService provides real-time road conditions and traffic information
service RoadsService {
  // ListRoads returns current conditions for all configured roads
  rpc ListRoads(ListRoadsRequest) returns (ListRoadsResponse) {
    option (google.api.http) = {
      get: "/api/v1/roads"
    };
  }

  // GetRoad returns current conditions for a specific road
  rpc GetRoad(GetRoadRequest) returns (GetRoadResponse) {
    option (google.api.http) = {
      get: "/api/v1/roads/{road_id}"
    };
  }

  // GetProcessingMetrics returns alert processing metrics
  rpc GetProcessingMetrics(GetProcessingMetricsRequest) returns (ProcessingMetrics) {
    option (google.api.http) = {
      get: "/api/v1/roads/metrics"
    };
  }
}

// Request messages
message ListRoadsRequest {}

message GetRoadRequest {
  string road_id = 1;
}

message GetProcessingMetricsRequest {}

// Response messages
message ListRoadsResponse {
  repeated Road roads = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message GetRoadResponse {
  Road road = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message ProcessingMetrics {
  int64 total_raw_alerts = 1;
  int64 filtered_alerts = 2;
  int64 enhanced_alerts = 3;
  int64 enhancement_failures = 4;
  double avg_processing_time_ms = 5;
}

// Data models
message Road {
  string id = 1;
  string name = 2;                    // Highway/road name (e.g., "Hwy 4")
  string section = 3;                 // Section description (e.g., "Arnold to Bear Valley")
  RoadStatus status = 4;              // Current road status
  int32 duration_minutes = 5;         // Current travel time in minutes
  int32 distance_km = 6;              // Route distance in kilometers
  CongestionLevel congestion_level = 7; // Traffic congestion level
  int32 delay_minutes = 8;            // Additional time due to traffic (0 = no delays)
  ChainControlStatus chain_control = 9; // Chain control requirements
  repeated RoadAlert alerts = 10;     // Combined from multiple sources
}


// TrafficCondition merged into Road for simplicity

message RoadAlert {
  string id = 1;
  AlertType type = 2;
  AlertSeverity severity = 3;
  AlertClassification classification = 4;  // NEW: On route vs nearby
  string title = 5;
  string original_description = 6;         // NEW: Raw Caltrans description
  string description = 7;                  // UPDATED: Now AI-processed description
  string condensed_summary = 8;            // NEW: Short format for mobile
  google.protobuf.Timestamp start_time = 9;
  google.protobuf.Timestamp end_time = 10;
  google.protobuf.Timestamp last_updated = 11;
  repeated string affected_segments = 12;
  Coordinates location = 13;
  map<string, string> metadata = 14;      // NEW: Dynamic key-value pairs
}

message TrafficIncident {
  string id = 1;
  string description = 2;
  float location_mile_marker = 3;
  int32 estimated_delay_minutes = 4;
}

// Enumerations
enum RoadStatus {
  ROAD_STATUS_UNSPECIFIED = 0;
  OPEN = 1;
  CLOSED = 2;
  RESTRICTED = 3;
  MAINTENANCE = 4;
}

enum ChainControlStatus {
  CHAIN_CONTROL_UNSPECIFIED = 0;
  NONE = 1;
  ADVISED = 2;
  REQUIRED = 3;
  PROHIBITED = 4;
}

enum CongestionLevel {
  CONGESTION_LEVEL_UNSPECIFIED = 0;
  CLEAR = 1;
  LIGHT = 2;
  MODERATE = 3;
  HEAVY = 4;
  SEVERE = 5;
}

enum AlertType {
  ALERT_TYPE_UNSPECIFIED = 0;
  CLOSURE = 1;
  CONSTRUCTION = 2;
  INCIDENT = 3;
  WEATHER = 4;
}

enum AlertSeverity {
  ALERT_SEVERITY_UNSPECIFIED = 0;
  INFO = 1;
  WARNING = 2;
  CRITICAL = 3;
}

enum AlertClassification {
  ALERT_CLASSIFICATION_UNSPECIFIED = 0;
  ON_ROUTE = 1;      // Directly affects route path
  NEARBY = 2;        // In surrounding area but not blocking route
}
